--- a/app/src/main/res/navigation/nav_qibla.xml
+++ b/app/src/main/res/navigation/nav_qibla.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_qibla"
-    app:startDestination="@id/compass_frag">
+    app:startDestination="@id/compassFragment">
 
     <fragment
-        android:id="@+id/compass_frag"
-        android:name="com.example.prayer.qibla.CompassFragment"
-        android:label="@string/app_name" />
+        android:id="@+id/compassFragment"
+        android:name="com.example.islamic.qibla.CompassFragment"
+        android:label="CompassFragment"
+        tools:layout="@layout/fragment_compass" />
+
 </navigation>
