--- a/app/src/main/res/layout/surah.xml
+++ b/app/src/main/res/layout/surah.xml
@@ -4,7 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layoutDirection="rtl"
-    android:layout_marginStart="12dp" android:layout_marginEnd="12dp"  android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:padding="0dp">
+    android:layout_marginStart="12dp"
+    android:layout_marginEnd="12dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginBottom="8dp"
+    android:padding="0dp">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
