--- a/app/src/main/res/drawable/today_day_background.xml
+++ b/app/src/main/res/drawable/today_day_background.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="12dp" />
-    <solid android:color="@color/today_day_color" />
-    <stroke android:width="2dp" android:color="@color/colorSecondaryVariant" />
+    <solid android:color="@color/qibla_button_color" />
+    <stroke android:width="2dp" android:color="@color/qibla_button_color" />
 </shape>
