--- a/app/src/main/res/navigation/nav_qibla.xml
+++ b/app/src/main/res/navigation/nav_qibla.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/compassFragment"
-        android:name="com.example.islamic.qibla.CompassFragment"
+        android:name="com.eslamdev.islamic.qibla.CompassFragment"
         android:label="CompassFragment"
         tools:layout="@layout/fragment_compass" />
 
